# Demeter

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION-SUMMARY.md  QUICKSTART-SNOWFLAKE.md  README-AUTH.md  README-BACKEND.md  README-DEPARTMENT.md  README-HOLIDAY.md  README-LOGGING.md  README-PROJECT.md  README-SNOWFLAKE.md  README-TASK.md  README-TEAM.md  README-USER.md  RUST-PROMPT.md  USAGE-SNOWFLAKE.md  compose.yml
.github/skills/api-design/: SKILL.md
docs/: update-api-conventions.md  update-api-unification-plan.md  代办事项.md
migrations/: 20260110000000_create_users_table.sql  20260110000001_create_refresh_tokens_table.sql  20260110000002_create_holidays_table.sql  20260110000003_create_departments_table.sql  20260110000004_create_teams_table.sql  20260110000005_create_projects_table.sql  20260110000006_create_tasks_table.sql  20260110000007_create_user_departments_table.sql  20260110000008_create_user_teams_table.sql  20260110000009_create_project_visits_table.sql  20260110000010_create_project_members_table.sql  20260110000011_create_project_team_roles_table.sql  20260110000012_create_project_department_roles_table.sql  20260111000000_create_projects_table.sql  20260113000000_create_tasks_table.sql
src/: main.rs
src/common/: app_state.rs  error.rs  id.rs  jwt.rs  middleware.rs  mod.rs  response.rs  serde_helpers.rs  snowflake.rs
src/config/: logging.rs  mod.rs
src/modules/: mod.rs
webapp/: PROMPT.md  index.html  package.json  tsconfig.app.json  vite.config.ts
webapp/src/: App.tsx  AppRoutes.tsx  main.tsx
(+327 files in other folders)
