[package]
name = "Demeter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
cookie = "0.18.1"
utoipa = {version = "5.4.0", features = ["axum_extras", "chrono"]}
utoipa-swagger-ui = "9.0.2"
